--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "chart.js": "^4.5.1",
+    "katex": "^0.16.27",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
+    "react-katex": "^3.1.0",
     "react-router-dom": "^7.10.1"
   },
   "devDependencies": {
